# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  main.c  moullitest_res
inc/: ft_printf.h
libft/: Makefile  ft_strlcat.c  ft_strnjoinfree.c  ft_strrchr.c  ft_strsub.c  libft.h
src/: additional.c  define_flags.c  define_specification.c  ft_printf.c  handle_c.c  handle_char.c  handle_cs.c  handle_i.c  handle_id.c  handle_integer.c  handle_nbr.c  handle_oubxp.c  handle_wc.c  handle_wchar.c  handle_xp.c  pr_color.c  pr_color_me.c  pr_define_flags.c  pr_define_my_flags.c  pr_extract_me.c  pr_join.c  pr_join_me.c  pr_refresh_buf.c  pr_refresh_me.c  pr_utoa.c  pr_utoa_me.c  specification_define.c
